# sie-mvp

./: .gitignore  CHANGELOG.md  LICENSE  NEXT_STEPS.md  README.md  ROADMAP.md  SIE_SPEC.md  SKILL.md  SKILL.md.sie.json  THREAT_MODEL.md  pyproject.toml  sie_registry_client.py  sie_verify.py  trusted_issuers.json
.github/workflows/: ci.yml
demo/: run_demo.py
docs/: DEMO_SCRIPT.md  ENFORCEMENT_BEHAVIOR.md  FAILURE_MODES.md  IMPLEMENTATION_RISKS.md  IMPLEMENTATION_TICKETS.md  MAINTAINER_CHECKLIST.md  OPENCLAW_EXECUTION_PLAN.md  OPENCLAW_INTEGRATION.md  OPENCLAW_PATCH_SKELETON.md  SECURITY_CLAIMS.md  VALIDATION.md
integrations/: openclaw_hook.py  openclaw_loader_sim.py  openclaw_sie_config.py  sie_enforcement.py  sie_loader.py
scripts/: sign.ps1  sign.sh  validate_all.ps1  validate_all.sh  verify.ps1  verify.sh
tests/: test_loader_sim.py  test_openclaw_hook.py  test_openclaw_sie_config.py  test_sie_enforcement.py  test_verify_cli.py
